--- a/libs/atoms/src/lib/Presentation/Presentation.module.scss
+++ b/libs/atoms/src/lib/Presentation/Presentation.module.scss
@@ -1,7 +1,10 @@
-/*
- * Replace this with your own classes
- *
- * e.g.
- * .container {
- * }
-*/
+.container {
+  font-family: sans-serif;
+  display: flex;
+  flex-direction: column;
+  div {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+  }
+}
