--- a/packages/client/src/atoms/Button/Button.module.scss
+++ b/packages/client/src/atoms/Button/Button.module.scss
@@ -1,15 +1,15 @@
-@import '../../styles/_variables';
+@import '../../styles/variables';
 
 .container {
   display: flex;
   justify-content: center;
   align-items: center;
-  border-radius: 40px;
-  width: 200px;
+  border-radius: 10px;
   height: 40px;
   font-size: 1.2rem;
   font-weight: 700;
-  background-color: $blue;
   color: white;
+  background-color: $mediumGray;
   font-family: $fontPrimary;
+  border: none;
 }
