--- a/packages/client/src/components/Form/Form.module.scss
+++ b/packages/client/src/components/Form/Form.module.scss
@@ -10,10 +10,12 @@
   border-radius: 12px;
   display: flex;
   flex-direction: column;
-
 }
 .title {
   align-self: center;
   font-family: $fontPrimary;
   color: $purple
+}
+.alert {
+  color: red;
 }
