Form update atoms, components, tests and styles

--- a/packages/client/src/components/Input/Input.module.scss
+++ b/packages/client/src/components/Input/Input.module.scss
@@ -1,4 +1,4 @@
-@import '../../styles/_variables';
+@import '../../styles/variables';
 
 .container {
   display: flex;
@@ -6,22 +6,30 @@
   font-family: $fontPrimary;
 }
 .labelContainer{
- margin-bottom: 10px;
  display: flex;
+  height: 25px;
 }
 .label {
   color: $darkGray;
+}
+.inputContainer {
+  position: relative;
 }
 .input {
   border: none;
   outline: none;
   border-bottom: 1px solid $mediumGray;
-  padding-left: 20px;
+  padding-left: 25px;
+  padding-bottom: 10px;
   font-family: $fontPrimary;
   font-size: 16px;
   &:focus {
     outline-color: transparent;
   }
+}
+.iconContainer {
+  position: absolute;
+  z-index: 1;
 }
 .alert {
   transform: translateY(-15px);
