--- a/packages/client/src/features/Form/Form.module.scss
+++ b/packages/client/src/features/Form/Form.module.scss
@@ -1,7 +1,8 @@
-@import '../../styles/_variables';
+@import '../../styles/variables';
 
 .container {
   width: 420px;
+  height: 450px;
   padding: 25px;
   padding-top: 5px;
   border: 2px solid;
@@ -10,6 +11,12 @@
   border-radius: 12px;
   display: flex;
   flex-direction: column;
+}
+.form {
+  display: flex;
+  height: 100%;
+  flex-direction: column;
+  justify-content: space-between;
 }
 .title {
   align-self: center;
