--- a/packages/client/src/components/Input/Input.module.scss
+++ b/packages/client/src/components/Input/Input.module.scss
@@ -16,6 +16,7 @@
   position: relative;
 }
 .input {
+  background-color: white;
   border: none;
   outline: none;
   border-bottom: 1px solid $mediumGray;
