--- a/packages/client/src/features/Form/Form.module.scss
+++ b/packages/client/src/features/Form/Form.module.scss
@@ -1,7 +1,8 @@
 @import '../../styles/variables';
 
 .container {
-  width: 420px;
+  background-color: white;
+  width: 475px;
   height: 450px;
   padding: 25px;
   padding-top: 5px;
