--- a/packages/client/src/atoms/Button/Button.module.scss
+++ b/packages/client/src/atoms/Button/Button.module.scss
@@ -9,7 +9,7 @@
   font-size: 1.2rem;
   font-weight: 700;
   color: white;
-  background-color: $mediumGray;
   font-family: $fontPrimary;
   border: none;
+  background: $gradientPrimary;
 }
