--- a/packages/client/src/styles/_mixin.scss
+++ b/packages/client/src/styles/_mixin.scss
@@ -2,6 +2,6 @@
 
 @mixin gradientText(){
   background: $gradientPrimary;
-  background-clip: text;
+  -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
 }
