--- a/packages/client/src/atoms/LinkList/Styles.module.scss
+++ b/packages/client/src/atoms/LinkList/Styles.module.scss
@@ -1,11 +1,6 @@
-.page {
-  height: 100vh;
-  width: 100vw;
-}
-.main {
-  height: 90%;
-  width: 100%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
+.list {
+  list-style: none;
+  .link {
+    text-decoration: none;
+  }
 }
