--- a/packages/client/src/components/AuthButtons/Styles.module.scss
+++ b/packages/client/src/components/AuthButtons/Styles.module.scss
@@ -1,6 +1,10 @@
 @import "../../styles/_variables";
 .authNav {
+  ul {
+    list-style: none;
+  }
   .link {
+    text-decoration: none;
     &:hover {
       color: $hover-color
     }
