Theme and Modal

--- a/packages/client/src/atoms/Modal/Styles.module.scss
+++ b/packages/client/src/atoms/Modal/Styles.module.scss
@@ -1,23 +1,36 @@
-.modal {
-  width: 90vw;
-  border-radius: 5px;
+@import "../../styles/mixin";
+
+.modalContainer {
   position: absolute;
-  top: 50px;
-  z-index: 999;
+  z-index: 100;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  background-color: rgba(0, 0, 0, 0.1);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  .modal {
+    width: 90%;
+    height: 90%;
+    border-radius: 5px;
+    z-index: 101;
+  }
 }
 
-    @media (prefers-color-scheme: dark) {
-      .modal {
-        color: white;
-        background: blue;
-      }
-    }
+:global(.darkMode) .modal {
+  @include theme('dark');
+  background-color: var(--background-modal);
+}
+
+:global(.lightMode) .modal {
+  @include theme('light');
+  background-color: var(--background-modal);
+}
 
 
-    @media (prefers-color-scheme: light) {
-      .modal {
-        color: white;
-        background: red;
-      }
-    }
+
+
 
