--- a/packages/client/src/styles/_variables.scss
+++ b/packages/client/src/styles/_variables.scss
@@ -4,4 +4,11 @@ $mediumGray: #828FA3;
 $darkGray: #2B2C37;
 $purple: #635FC7;
 $fontPrimary: sans-serif;
-$gradientPrimary : linear-gradient(90deg, rgba(149,0,202,1) 29%, rgba(255,0,185,1) 100%)
+$gradientPrimary: linear-gradient(90deg, rgba(149, 0, 202, 1) 29%, rgba(255, 0, 185, 1) 100%);
+
+$dark-mode-variables: (
+        background-modal: #202124,
+);
+$light-mode-variables: (
+        background-modal: #CACAC2,
+)
