--- a/packages/client/src/atoms/Modal/Styles.module.scss
+++ b/packages/client/src/atoms/Modal/Styles.module.scss
@@ -16,7 +16,18 @@
     width: 90%;
     height: 90%;
     border-radius: 5px;
+    position: absolute;
+    top: 5%;
+    left: 5%;
     z-index: 101;
+  }
+  .close {
+    width:100%;
+    display: flex;
+    justify-content: flex-end;
+    span {
+     margin: 10px 15px 0 0;
+    }
   }
 }
 
