--- a/packages/client/src/components/Modal/Styles.module.scss
+++ b/packages/client/src/components/Modal/Styles.module.scss
@@ -11,7 +11,6 @@
   display: flex;
   justify-content: center;
   align-items: center;
-
   .modal {
     width: 90%;
     height: 90%;
@@ -20,6 +19,9 @@
     top: 5%;
     left: 5%;
     z-index: 101;
+    display: flex;
+    flex-direction: column;
+    align-content: space-between;
   }
   .close {
     width:100%;
@@ -28,6 +30,16 @@
     span {
      margin: 10px 15px 0 0;
     }
+  }
+  .body {
+    flex: 1;
+    align-self: center;
+    display: flex;
+    justify-content: center;
+  }
+  .footer {
+    flex: 1;
+    display: flex;
   }
 }
 
